v0.14.05 Temp point (Error view)